compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__inconsistent_try_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 710
expression: try x = Error(1) Error(1.)

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:18
  │
1 │ try x = Error(1) Error(1.)
  │                  ^^^^^^^^^

This returned value has a type incompatible with the previous try expression.
All the try expressions in a block and the final result value must have
the same error type.

Expected type:

    Result(a, Int)

Found type:

    Result(a, Float)


